--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ function playVid1() {
   </script>
   <script>
   function photoChange1() {       
-    document.getElementById("chocolate").src = "images/cover-choco.JPG";
+    document.getElementById("chocolate").src = "images/cover-choco.jpg";
   }
   </script>
 <script>
@@ -189,7 +189,7 @@ function playVid2() {
   </script>
   <script>
   function photoChange2() {       
-    document.getElementById("broccoli").src = "images/cover-broccoli.JPG";
+    document.getElementById("broccoli").src = "images/cover-broccoli.jpg";
   }
   </script>
 
@@ -237,7 +237,7 @@ function playVid3() {
   </script>
   <script>
   function photoChange3() {       
-    document.getElementById("money").src = "images/cover-money.JPG";
+    document.getElementById("money").src = "images/cover-money.jpg";
   }
   </script>
 
