--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <script src="code.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
 
-    <title>HBL-E</title>
+    <title>HBL-E-01</title>
   </head>
   <body>
     <div class="container-fluid">
         <div class="row nav flex-parent">
-          <div class="logo">HBL-E</div>
+          <div class="logo">HBL-E-01</div>
          <!--  <div class="go-to-main flex-parent"><a class="back"><p class="p-link">Back</p></a></div>-->
   
 
