--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@ document.getElementById("package").src = "images/cover-package.jpg";
     </div>
 
 
+<a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter1.stat.ovh/private/freecounterstat.php?c=ekcdguhbywgfbagbgtpdf6ahy9j619le" border="0" title="free hit counter" alt="free hit counter"></a>
 
 
 
