--- a/index.html
+++ b/index.html
@@ -330,11 +330,10 @@ document.getElementById("package").src = "images/cover-package.jpg";
       </div>
     </div>
   </div>
+<a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter7.stat.ovh/private/freecounterstat.php?c=7n5wsh2t4q16pcyrr9u4ns3dztlth4a9" border="0" title="website counter" alt="website counter"></a>
 
     </div>
 
-
-<a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter1.stat.ovh/private/freecounterstat.php?c=ekcdguhbywgfbagbgtpdf6ahy9j619le" border="0" title="free hit counter" alt="free hit counter"></a>
 
 
 
